<resources>
    <string name="app_name">lethilinhchi_2122110399</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">Tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="register_button">Đăng Ký</string>
    <string name="login_button">Đăng Nhập</string>
    <string name="login_link">Đã có tài khoản? Đăng nhập</string>
    <string name="register_link">Chưa có tài khoản? Đăng ký</string>

</resources>