<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <!-- Layout Đăng Ký -->
    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="402dp"
        android:layout_height="447dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:layout_width="154dp"
            android:layout_height="145dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logone" />

        <EditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register_button"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:paddingVertical="12dp"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/login_link"
            android:textColor="#0000FF" />
    </LinearLayout>

    <!-- Layout Đăng Nhập -->
    <LinearLayout
        android:id="@+id/layout_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"

        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:paddingVertical="12dp"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-medium"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_link"
            android:textColor="#0000FF"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
